fix dark mode color

--- a/docs/assets/css/extra.css
+++ b/docs/assets/css/extra.css
@@ -43,6 +43,10 @@
     background-color: #ffffffb3;
 }
 
+[data-md-color-scheme="slate"] .md-typeset a {
+    color: #00bda4 !important;
+}
+
 /* Releases page table */
 .version-th-center, .version-td-center {
     text-align: center;
